--- a/app/src/main/res/layout/activity_reward.xml
+++ b/app/src/main/res/layout/activity_reward.xml
@@ -167,6 +167,7 @@
                     android:textSize="20sp" />
 
                 <ImageView
+                    android:id="@+id/video2Icon"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     app:srcCompat="@drawable/youtube" />
@@ -201,6 +202,7 @@
                     android:textSize="20sp" />
 
                 <ImageView
+                    android:id="@+id/video3Icon"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     app:srcCompat="@drawable/youtube" />
@@ -235,6 +237,7 @@
                     android:textSize="20sp" />
 
                 <ImageView
+                    android:id="@+id/video4Icon"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     app:srcCompat="@drawable/youtube" />
@@ -272,6 +275,7 @@
                     android:textSize="20sp" />
 
                 <ImageView
+                    android:id="@+id/video5Icon"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     app:srcCompat="@drawable/youtube" />
