--- a/app/src/main/res/layout/activity_selected.xml
+++ b/app/src/main/res/layout/activity_selected.xml
@@ -9,6 +9,23 @@
     android:background="@drawable/background">
 
 
+    <FrameLayout
+        android:id="@+id/native_ad_layout"
+        android:layout_width="300dp"
+        android:layout_height="250dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:visibility="visible"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
+        android:background="@color/white"
+        app:cardElevation="20dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="250dp"
