--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -55,7 +55,7 @@
             android:layout_marginRight="32dp"
             android:layout_marginTop="20dp"
 
-            android:visibility="gone"
+            android:visibility="visible"
             app:gnt_template_type="@layout/gnt_medium_template_view"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
