--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,10 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primiry">#E1490F</color>
-    <color name="darkprmary">#DD673A</color>
+    <color name="primiry">#1938D5</color>
+    <color name="darkprmary">#3651DA</color>
 
-    <color name="gray">#DDD2CE</color>
+    <color name="gray">#C8C0BD</color>
     <color name="green">#1A549C</color>
 
     <color name="red">#D50303</color>
