end call bugfix ok

--- a/app/src/main/res/layout/activity_connecting.xml
+++ b/app/src/main/res/layout/activity_connecting.xml
@@ -8,9 +8,20 @@
     android:background="@drawable/bg_finding">
 
 
-
-
-
+    <com.google.android.ads.nativetemplates.TemplateView
+        android:id="@+id/template"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:visibility="visible"
+        app:gnt_template_type="@layout/gnt_small_template_view"
+        app:layout_constraintBottom_toTopOf="@+id/profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.313" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="wrap_content"
