--- a/app/src/main/res/layout/activity_call_type.xml
+++ b/app/src/main/res/layout/activity_call_type.xml
@@ -122,5 +122,21 @@
 
     </LinearLayout>
 
+    <FrameLayout
+        android:id="@+id/native_ad_layout"
+        android:layout_width="300dp"
+        android:layout_height="250dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@color/white"
+        android:visibility="visible"
+        app:cardElevation="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fake_call" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
